Changelog
=========

1.5.2 - July 25, 2012
---------------------

- Renamed titles in "Create Task" window.
  [Jose Dinuncio]

- Implemented Control Panel for OpenERP actions.
  [Jose Dinuncio]

- Fixed VNC Zimlet related code security issues.
  [Jose Dinuncio]

1.5.1 - July 24, 2012
---------------------

- Fixed Create Content Area z-index.
  [Vitaliy Podoba]

- Add parent container titles to Add Content Area dropdown items.
  [Vitaliy Podoba]

- Updated portlet styles.
  [Serhiy Valchuk]

1.5 - July 13, 2012
-------------------

- Implemented new design.
  [Serhiy Valchuk, Vitaliy Podoba]

- First Alpha Version of Stream Viewlet implemented.
  [Vitaliy Podoba]

- Zimbra Task creation implemented.
  [Jose Dinuncio]

- Minor fixes to xmpp messaging applied.
  [Taras Melnychuk]


1.0dev (unreleased)
-------------------

- Initial release